--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -1,8 +1,18 @@
 # 创建资源规格
 
-在创建租户前，需要先确定租户的资源规格和资源使用范围。本文介绍如何创建资源规格。
+资源规格是对 CPU、内存、磁盘空间、IOPS 等资源项进行的定义。本文介绍如何创建资源规格。
 
-资源规格是指资源单元的规格，资源单元是资源调度使用的基本单位。在不同场景中，会用到不同大小的资源单元，就需要通过 `CREATE RESOURCE UNIT` 来创建合适的资源规格，从而可以调度使用相应大小的资源单元。
+## 背景信息
+
+基于 OceanBase 3.x 版本的大量实践经验，OceanBase 4.0 的资源管理功能有很大改进：
+
+* 支持 Unit 级别管理 CPU、内存、日志盘空间、IOPS 等资源项，不支持 Unit 级别管理数据盘空间和 Session 个数等资源项。为了兼容 3.x 版本的运维工具和测试用例，`CREATE RESOURCE UNIT` 语句依然可以指定 `MAX_DISK_SIZE` 和 `MAX_SESSION_NUM`，但是不会生效，也不会报错。
+* 支持 CPU 超卖，通过超卖配置项 `resource_hard_limit` 控制。`GV$OB_SERVERS` 视图中的 `CPU_CAPACITY` 和 `CPU_CAPACITY_MAX` 字段分别表示节点 CPU 总容量 和 节点 CPU 总容量的超卖值，且 `CPU_CAPACITY_MAX = CPU_CAPACITY * resource_hard_limit`。
+* 不再支持内存超卖，引入内存超卖可能会导致租户工作不稳定。
+* 支持租户间日志盘空间隔离，系统为每个租户预留日志盘空间，避免 3.x 版本某个租户大量写入导致日志盘写爆从而影响其他租户的问题。
+* 支持租户间 IOPS 隔离，引入三个 IOPS 规格参数：`MIN_IOPS`、`MAX_IOPS`、`IOPS_WEIGHT`，IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。如果一个节点上所有 Unit 的 `MIN_IOPS` 之和超过了磁盘 IOPS 上限，则会根据 `IOPS_WEIGHT` 权重来分配 IOPS 资源。
+* Meta 租户没有独立的 Unit，系统创建租户时默认为 Meta 租户预留资源，各项资源从用户租户资源中扣除。Meta 各项资源采用默认配置，不支持用户指定。
+* 创建资源规格时 CPU 规格 和内存规格是必选项，其他参数可以自动计算，其中日志盘空间按照内存规格自动计算，IOPS 规格按照 CPU 规格自动计算。
 
 ## 操作步骤
 
@@ -18,7 +28,7 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格的配置信息。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取已有的资源规格配置信息。
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS;
@@ -38,27 +48,43 @@
 
    `DBA_OB_UNIT_CONFIGS` 视图的详细说明，请参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-4. 通过 `CREATE RESOURCE UNIT` 语句，创建名为 `S1_unit_config` 的资源规格。
+4. 通过 `CREATE RESOURCE UNIT` 语句，创建资源规格。
 
-    ```sql
-    obclient [oceanbase]> CREATE RESOURCE UNIT S1_unit_config
-                    MAX_CPU = 1, MIN_CPU = 1,
-                    MEMORY_SIZE = '2G',
-                    LOG_DISK_SIZE = '6G',
-                    MAX_IOPS = 10000, MIN_IOPS = 10000, IOPS_WEIGHT=1;
-    ```
+    * 语法
 
-   参数说明:
+        ```sql
+        CREATE RESOURCE UNIT unit_name 
+            MEMORY_SIZE [=] 'size_value',
+            MAX_CPU [=] cpu_num,  
+            [LOG_DISK_SIZE [=] 'size_value',]
+            [MAX_IOPS [=] iops_num,]
+            [MIN_CPU [=] cpu_num,]
+            [MIN_IOPS [=] iops_num];
+        ```
 
-   创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
+    * 参数说明
 
-   * MAX_CPU：CPU 规格上限，MIN_CPU 是 CPU 规格下限，单位是核数。如果用户没有指定 MIN_CPU，默认等于 MAX_CPU 值。
-   * MIN_CPU：最小的 CPU 规格，所有租户的 MIN_CPU 的总和不能超过该节点 CPU 总容量 CPU_CAPACITY。
-   * MEMORY_SIZE：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
-   * LOG_DISK_SIZE：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。当用户没有指定时，LOG_DISK_SIZE 默认值是  内存规格的 3 倍大小，最小为 2G。
-   * OceanBase 4.0 支持租户间 IOPS 隔离，通过 MAX_IOPS、MIN_IOPS、IOPS_WEIGHT 三个参数决定。IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。
+        创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
 
-   `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
+        * `MAX_CPU`：CPU 规格上限，`MIN_CPU` 是 CPU 规格下限，单位是核数。如果用户没有指定 `MIN_CPU`，默认等于 `MAX_CPU` 值。
+        * `MIN_CPU`：最小的 CPU 规格，所有租户的 `MIN_CPU` 的总和不能超过该节点 CPU 总容量 `CPU_CAPACITY`。
+        * `MEMORY_SIZE`：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
+        * `LOG_DISK_SIZE`：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。当用户没有指定时，`LOG_DISK_SIZE` 默认值是内存规格的 3 倍大小，最小为 2G。
+        * OceanBase 4.0 支持租户间 IOPS 隔离，通过 `MAX_IOPS`、`MIN_IOPS`、`IOPS_WEIGHT` 三个参数决定。IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。
+
+    `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
+
+    * 示例
+
+        创建一个名称为 `S1_unit_config` 的资源规格，其资源配置为 CPU 为 1 核，内存 2G，日志盘空间 6G。
+
+        ```sql
+        obclient [oceanbase]> CREATE RESOURCE UNIT S1_unit_config
+                        MEMORY_SIZE = '2G',
+                        MAX_CPU = 1, MIN_CPU = 1,
+                        LOG_DISK_SIZE = '6G',
+                        MAX_IOPS = 10000, MIN_IOPS = 10000, IOPS_WEIGHT=1;
+        ```
 
 5. 查询 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格创建成功。
 
