--- a/zh-CN/6.manage/2.tenant-management/2.tenant-type.md
+++ b/zh-CN/6.manage/2.tenant-management/2.tenant-type.md
@@ -2,6 +2,12 @@
 
 OceanBase 4.0 开始，有三种类型的租户：系统租户、用户租户以及每个用户租户对应的 Meta 租户。
 
+## 背景信息
+
+在 4.x 以前的版本中，只有系统租户和用户租户，存在本该属于用户租户的数据存放到了系统租户的问题，导致系统租户比较臃肿，引发系统租户资源占用过多、资源统计粒度粗、资源隔离不足等问题，对集群稳定性造成了较大挑战。OceanBase 4.0 开始引入了 Meta 租户，为每个用户租户配置一个对应的 Meta 租户来管理用户租户的私有数据，并使用用户租户的资源。
+
+RootService 承担了 OceanBase 数据库的大量管理工作，包括集群管理，租户管理，资源管理，负载均衡，每日合并调度，迁移复制等，RootService 基于系统租户支持以上功能。系统租户是 OceanBase 数据库内部用来处理集群公共任务的数据库实例。
+
 ## 租户类型介绍
 
 * 系统租户
@@ -18,11 +24,23 @@ OceanBase 4.0 开始，有三种类型的租户：系统租户、用户租户以
 
 用户租户与 Meta 租户是相关的概念，可以简单理解为：用户租户存放的都是与用户数据相关的信息，包括用户创建的表和部分系统表，这部分数据需要在主备集群之间同步，物理备份恢复也需要操作这部分数据；而 Meta 租户存放的都是支撑用户租户运行的集群私有数据，主备集群会各自创建自己的 Meta 租户，物理备份数据恢复出来的租户也会有自己的 Meta 租户，所以这部分数据不需要在主备集群之间同步，也不需要备份。系统租户与 Meta 租户类似，存放的是支撑集群运行的集群私有数据，同样无需主备集群之间同步及物理备份。
 
+![租户类型1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/easy-of-use/manage/tenant-management/%E7%A7%9F%E6%88%B7%E7%B1%BB%E5%9E%8B1.png)
+
+如上图所示：
+
+* 租户是 OceanBase 数据库中的一个实例，独占一定的物理资源，类似于云环境下的 Docker 。
+* 系统租户是集群默认创建的租户，与集群生命周期一致，负责管理集群和所有的用户租户。
+* 用户租户由用户创建，用户租户与 Meta 租户一一对应，具有相同的生命周期。
+* 私有数据表示支撑集群和用户租户运行的数据，每个集群和租户都会有自己的数据，这部分数据不需要在主备集群之间同步，也不需要物理备份。
+* 非私有数据表示用户数据，包括用户创建的表和部分系统表，需要在主备集群之间同步及物理备份。
+* 系统租户和 Meta 租户仅有一个 1 号日志流，不具备水平扩展能力。
+* 用户租户支持动态创建和删除日志流，具备水平扩展能力。
+
 ## 租户信息查询
 
-DBA_OB_TENANTS 视图中存储了租户的相关信息，您可以登录系统租户，查询 DBA_OB_TENANTS 视图。视图中的 TENANT_TYPE 表示租户的类型，其中 SYS 为系统租户，META 为 Meta 租户，User 为用户租户。租户 ID 为 1 的是系统租户。租户 ID 大于 1000 的租户中，偶数的是用户租户，奇数的是 Meta 租户，并且用户租户的租户 ID 比其对应 Meta 租户大 1。示例如下：
+登录系统租户，查询 `DBA_OB_TENANTS` 视图即可查看所有的租户。`TENANT_TYPE` 表示租户类型：SYS 为系统租户，META 为 Meta 租户，USER 为用户租户。租户 ID 为 1 的是系统租户。租户 ID 大于 1000 的租户中，偶数的是用户租户，奇数的是 Meta 租户，并且用户租户的租户 ID 比其对应 Meta 租户大 1。
 
-以租户 mysql001 为例，ID 为 1002，与之相应的 Meta 租户就是 META$1002，ID 为 1001。
+示例如下：
 
 ```sql
 obclient [oceanbase]> select * from DBA_OB_TENANTS;
@@ -39,3 +57,17 @@ obclient [oceanbase]> select * from DBA_OB_TENANTS;
 +-----------+-------------+-------------+----------------------------+----------------------------+-------------------+---------------------------------------------+-------------------+--------------------+--------+---------------+--------+
 9 rows in set
 ```
+
+## 租户类型的区别
+
+从用户视角，三种租户的关键特性的异同点如下：
+
+| 对比项 | 系统租户 | 用户租户 | Meta 租户 |
+|------|---------|---------|-----------|
+| 租户 ID（TENANT_ID） | 1     | 最小值：1002 | 最小值：1001</br>与用户租户 ID 关系：Meta 租户 ID + 1 = 用户租户 ID |
+| 租户类型（TENANT_TYPE） | SYS    | USER | META |
+| 租户名规范 | SYS    | 大小写英文字母、数字和下划线 | `META${user_tenant_id}`,例如：用户租户的租户 ID 为1002，Meta 租户名为：META$1002 |
+| 数据属性 | 集群私有数据    | 集群私有数据 | 集群私有数据 |
+| 扩展性 | 数据不可水平扩展，只有一个日志流    | 具备水平扩展能力，支持动态扩容和缩容 | 数据不可水平扩展，只有一个日志流 |
+| 租户运维 | <ul><li>创建：不支持</li><li>删除：不支持</li><li>重命名：不支持</li><li>用户登录：支持</li><li>修改 Locality：支持</li><li>修改 Primary Zone：支持</li></ul>   | <ul><li>创建：支持</li><li>删除：支持</li><li>重命名：支持</li><li>用户登录：支持</li><li>修改 Locality：支持</li><li>修改 Primary Zone：支持</li></ul>  | <ul><li>创建：不支持</li><li>删除：不支持</li><li>重命名：不支持</li><li>用户登录：不支持</li><li>修改 Locality：不支持</li><li>修改 Primary Zone：不支持</li></ul>  |
+| 数据对外访问接口 | 系统租户下的视图。    | <ol><li>系统租户下：<ol><li>`CDB_xxx` 视图和动态性能视图会展示所有用户租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有用户租户的信息。</li></ol></li><li> 用户租户下：展示本租户的数据。</li></ol>| Meta 租户不能直接登录，它的信息可以通过用户租户和系统租户进行访问。<ol><li>系统租户下：<ol><li>`CDB_xxx` 视图和动态性能视图会展示所有 -Meta 租户的数据。</li><li>`DBA_OB_TENANTS` 视图会展示所有 Meta 租户的信息。</li></ol></li><li> 用户租户下：Meta 租户管理的数据会通过用户租户下的视图展示出来，例如路由信息 `DBA_OB_LS_LOCATIONS`、配置项信息 `GV$OB_PARAMETERS` 等。</li></ol> |
