--- a/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.disaster-recovery-management/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -1,10 +1,10 @@
 # 数据库层高可用
 
-OceanBase 数据库基于高性价比的普通服务器采用 Paxos 协议，同一份数据写到多台（>= 3）节点的半数以上，因此当少数派节点发生故障时不会有任何数据丢失，保证 RPO=0；Leader 副本发生故障后，剩余的 Follower 副本能够在短时间内自动选出新 Leader 继续提供服务，无需外部介入，保证 RTO < 30 秒，从而达到强一致和高可用的平衡。用户也可以采用灵活的部署模式，例如，同城三中心、两地三中心、三地五中心等，从而达到各级无损容灾能力，例如同城容灾和异地容灾。
+OceanBase 数据库基于高性价比的普通服务器采用 Paxos 协议，同一份数据写到多台（>= 3）节点的半数以上，因此当少数派节点发生故障时不会有任何数据丢失，保证 RPO=0；Leader 副本发生故障后，剩余的 Follower 副本能够在短时间内自动选出新 Leader 继续提供服务，无需外部介入，保证 RTO < 8 秒，从而达到强一致和高可用的平衡。用户也可以采用灵活的部署模式，例如，同城三中心、两地三中心、三地五中心等，从而达到各级无损容灾能力，例如同城容灾和异地容灾。
 
-## RootService
+## Root Service
 
-在 OceanBase 数据库中，RootService 负责集群的节点管理，各 OBServer 通过心跳数据包（heartbeat）的方式，定期（每 2s）向 RootService 汇报自己的进程状态，RootService 通过监测 OBServer 的心跳数据包，来获取当前 OBServer 进程的工作状态。
+在 OceanBase 数据库中，Root Service 负责集群的节点管理，各 OBServer 通过心跳数据包（heartbeat）的方式，定期（每 2s）向 Root Service 汇报自己的进程状态，Root Service 通过监测 OBServer 的心跳数据包，来获取当前 OBServer 进程的工作状态。
 
 OBServer 心跳状态相关的配置项如下：
 
@@ -12,28 +12,28 @@ OBServer 心跳状态相关的配置项如下：
   
   集群级配置项 `lease_time` 用于设置心跳租约时长。该配置项的默认值为 10s。有关该配置项的详细信息，请参见 [lease_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/118.lease_time.md)。
 
-  当 RootService 累计超过 `lease_time` 时间没有收到过某 OBServer 的任意心跳数据包时，RootService 认为该 observer 进程短暂断线，RootService 会标记该 OBServer 的心跳状态为 `lease_expired`。
+  当 Root Service 累计超过 `lease_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程短暂断线，Root Service 会标记该 OBServer 服务器的心跳状态为 `lease_expired`。
 
 * `server_permanent_offline_time`
   
   集群级配置项 `server_permanent_offline_time` 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。该配置项的默认值为 3600s。有关该配置项的更多详细信息，请参见 [server_permanent_offline_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md)。
 
-  当 RootService 累计超过 `server_permanent_offline_time` 时间没有收到过某 OBServer 的任意心跳数据包时，RootService 认为该 observer 进程断线，RootService 会标记该 OBServer 的心跳状态为 `permanent_offline`。
+  当 Root Service 累计超过 `server_permanent_offline_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程断线，Root Service 会标记该 OBServer 的心跳状态为 `permanent_offline`。
 
 <main id="notice" type='explain'>
             <h4>说明</h4>
             <p>您可以通过 <code>SHOW PARAMETERS</code> 语句查看以上集群级配置项的值，例如，<code>SHOW PARAMETERS LIKE 'server_permanent_offline_time';</code>。</p>
           </main>
 
-RootService 根据心跳数据包可以获得 OBServer 如下的工作状态：
+Root Service 根据心跳数据包可以获得 OBServer 如下的工作状态：
 
-* OBServer 心跳数据包存在，心跳数据包中的 OBServer 磁盘状态正常。此种状态下，RootService 认为 OBServer 处于正常工作状态。
+* OBServer 心跳数据包存在，心跳数据包中的 OBServer 磁盘状态正常。此种状态下，Root Service 认为 OBServer 处于正常工作状态。
 
-* OBServer 心跳数据包存在，心跳数据包中的 OBServer 磁盘状态异常。此种状态下，RootService 认为 observer 的进程还在，但 OBServer 磁盘故障。此种状态下，RootService 会尝试将该 OBServer 上的全部 leader 副本切走。
+* OBServer 心跳数据包存在，心跳数据包中的 OBServer 磁盘状态异常。此种状态下，Root Service 认为 observer 进程还在，但 OBServer 磁盘故障。此种状态下，Root Service 会尝试将该 OBServer 上的全部 leader 副本切走。
 
-* OBServer 心跳数据包不存在，OBServer 心跳数据包的丢失时间还比较短，OBServer 心跳状态为 lease_time，此种状态下，RootService 仅将 OBServer 的工作状态设置为 inactive，不做其他处理。
+* OBServer 心跳数据包不存在，OBServer 心跳数据包的丢失时间还比较短，OBServer 心跳状态为 lease_time，此种状态下，Root Service 仅将 OBServer 的工作状态设置为 inactive，不做其他处理。
 
-* OBServer 心跳数据包不存在，OBServer 心跳数据包丢失时间超过 `server_permanent_offline_time`，OBServer 的心跳状态为 `permanent_offline`，此种情况下，RootService 会对该 OBServer 上的数据副本进行处理，将该 OBServer 上包含的数据副本从 Paxos 成员组中删除，并在其他可用 OBServer 上补充数据，以保证数据副本 Paxos 成员组完整。
+* OBServer 心跳数据包不存在，OBServer 心跳数据包丢失时间超过 `server_permanent_offline_time`，OBServer 的心跳状态为 `permanent_offline`，此种情况下，Root Service 会对该 OBServer 上的数据副本进行处理，将该 OBServer 上包含的数据副本从 Paxos 成员组中删除，并在其他可用 OBServer 上补充数据，以保证数据副本 Paxos 成员组完整。
 
 ## 隔离节点
 
