--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -50,41 +50,41 @@
 
 4. 通过 `CREATE RESOURCE UNIT` 语句，创建资源规格。
 
-    * 语法
+    语法如下：
 
-        ```sql
-        CREATE RESOURCE UNIT unit_name 
-            MEMORY_SIZE [=] 'size_value',
-            MAX_CPU [=] cpu_num,  
-            [LOG_DISK_SIZE [=] 'size_value',]
-            [MAX_IOPS [=] iops_num,]
-            [MIN_CPU [=] cpu_num,]
-            [MIN_IOPS [=] iops_num];
-        ```
+    ```sql
+    CREATE RESOURCE UNIT unit_name 
+        MEMORY_SIZE [=] 'size_value',
+        MAX_CPU [=] cpu_num,  
+        [LOG_DISK_SIZE [=] 'size_value',]
+        [MAX_IOPS [=] iops_num,]
+        [MIN_CPU [=] cpu_num,]
+        [MIN_IOPS [=] iops_num];
+    ```
 
-    * 参数说明
+    参数说明：
 
-        创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
+    创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
 
-        * `MAX_CPU`：CPU 规格上限，`MIN_CPU` 是 CPU 规格下限，单位是核数。如果用户没有指定 `MIN_CPU`，默认等于 `MAX_CPU` 值。
-        * `MIN_CPU`：最小的 CPU 规格，所有租户的 `MIN_CPU` 的总和不能超过该节点 CPU 总容量 `CPU_CAPACITY`。
-        * `MEMORY_SIZE`：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
-        * `LOG_DISK_SIZE`：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。当用户没有指定时，`LOG_DISK_SIZE` 默认值是内存规格的 3 倍大小，最小为 2G。
-        * OceanBase 4.0 支持租户间 IOPS 隔离，通过 `MAX_IOPS`、`MIN_IOPS`、`IOPS_WEIGHT` 三个参数决定。IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。
+    * `MAX_CPU`：CPU 规格上限，`MIN_CPU` 是 CPU 规格下限，单位是核数。如果用户没有指定 `MIN_CPU`，默认等于 `MAX_CPU` 值。
+    * `MIN_CPU`：最小的 CPU 规格，所有租户的 `MIN_CPU` 的总和不能超过该节点 CPU 总容量 `CPU_CAPACITY`。
+    * `MEMORY_SIZE`：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
+    * `LOG_DISK_SIZE`：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。当用户没有指定时，`LOG_DISK_SIZE` 默认值是内存规格的 3 倍大小，最小为 2G。
+    * OceanBase 4.0 支持租户间 IOPS 隔离，通过 `MAX_IOPS`、`MIN_IOPS`、`IOPS_WEIGHT` 三个参数决定。IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。
 
     `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
 
-    * 示例
+    示例如下：
 
-        创建一个名称为 `S1_unit_config` 的资源规格，其资源配置为 CPU 为 1 核，内存 2G，日志盘空间 6G。
+    创建一个名称为 `S1_unit_config` 的资源规格，其资源配置为 CPU 为 1 核，内存 2G，日志盘空间 6G。
 
-        ```sql
-        obclient [oceanbase]> CREATE RESOURCE UNIT S1_unit_config
-                        MEMORY_SIZE = '2G',
-                        MAX_CPU = 1, MIN_CPU = 1,
-                        LOG_DISK_SIZE = '6G',
-                        MAX_IOPS = 10000, MIN_IOPS = 10000, IOPS_WEIGHT=1;
-        ```
+    ```sql
+    obclient [oceanbase]> CREATE RESOURCE UNIT S1_unit_config
+                    MEMORY_SIZE = '2G',
+                    MAX_CPU = 1, MIN_CPU = 1,
+                    LOG_DISK_SIZE = '6G',
+                    MAX_IOPS = 10000, MIN_IOPS = 10000, IOPS_WEIGHT=1;
+    ```
 
 5. 查询 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格创建成功。
 
