--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
@@ -43,7 +43,26 @@
 
 4. 通过 `CREATE RESOURCE POOL` 语句，创建资源池。
 
-   在本示例中，创建了一个名为 `mq_pool_01` 的资源池，并在 zone1、zone2 里各创建 1 个 unit，每个 unit 的资源规格为 `S1_unit_config`。
+    语法如下：
+
+    ```sql
+    CREATE RESOURCE POOL poolname 
+        UNIT [=] unitname, 
+        UNIT_NUM [=] unitnum, 
+        ZONE_LIST [=] ('zone' [, 'zone' ...]);
+    ```
+
+    参数说明：
+
+    * `UNIT`：该资源池的资源规格。
+    * `UNIT_NUM`：该资源池在目标 Zone 的 Unit 个数，它的值要小于目标 Zone 的节点个数，且每个节点上最多只能分布同一个租户的一个 Unit。
+    * `ZONE_LIST`：资源池的 Zone 分布。OceanBase 数据库会在 `ZONE_LIST` 描述的每个 Zone 里面创建 `UNIT_NUM` 个 Unit，每个 Unit 的资源规格为 UNIT 参数设置的值。
+
+    `CREATE RESOURCE POOL` 语句的详细说明，请参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
+
+    示例如下：
+
+    创建一个名为 `mq_pool_01` 的资源池，在 zone1、zone2 里各创建 1 个 Unit，每个 Unit 的资源规格为 `S1_unit_config`。
 
     ```sql
     obclient [oceanbase]> CREATE RESOURCE POOL mq_pool_01 
@@ -51,14 +70,6 @@
                     UNIT_NUM=1, 
                     ZONE_LIST=('zone1','zone2'); 
     ```
-
-   参数说明：
-
-   * UNIT：该资源池的资源规格。
-   * ZONE_LIST：资源池的 Zone 分布。OceanBase 数据库会在 ZONE_LIST 描述的每个 Zone 里面创建 UNIT_NUM 个 unit，每个 unit 的资源规格为 UNIT 参数设置的值。
-   * UNIT_NUM：该资源池在目标 Zone 的 unit 个数，它的值要小于目标 Zone 的节点个数，且每个节点上最多只能分布同一个租户的一个 unit。
-
-   `CREATE RESOURCE POOL` 语句的详细说明，请参见 [CREATE RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/6.create-resource-pool.md)。
 
 5. 查询 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池创建成功。
 
