--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -1,17 +1,21 @@
 # 创建租户
 
-本文介绍如何创建租户。
+OceanBase是原生分布式数据库，在同一个数据库中可以同时运行多个数据库实例，第一步往往需要创建一个租户（数据库实例），然后像使用传统单机数据库那样使用数据库实例。本文介绍如何创建租户。
 
 ## 前提条件
 
-创建租户需要有可用的资源池，创建资源池需要有相应的资源规格，所以创建租户的一般顺序为：创建资源规格 > 创建资源池 > 创建租户。创建租户之前，请确保有可用的资源池。有关创建资源规格和资源池的详细操作，参见 [创建资源规格](1.create-resource-specifications.md) 和 [创建资源池](2.create-resource-pool.md)。
+* 确保已有可用的资源池
 
-<main id="notice" type='notice'>
- <h4>注意</h4>
- <p>OceanBase 数据库支持两种类型的租户，MySQL 兼容模式和 Oracle 兼容模式。创建租户时，您需要指定租户的类型。租户创建后，租户类型无法修改，因此创建租户前请规划好您的租户类型。</p>
-</main>
+  创建新租户时，如果当前的资源池均被使用（被其他租户使用），则需要创建新的资源池。在创建资源池前，需要先确定资源规格和资源使用范围。所以创建租户的顺序为：资源规格 -> 资源池 -> 租户。
+  
+  有关创建资源池和资源单元的详细操作，参见 [创建资源规格](1.create-resource-specifications.md) 和 [创建资源池](2.create-resource-pool.md)。
 
 ## 操作步骤
+
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>OceanBase 数据库支持两种类型的租户，MySQL 兼容模式和 Oracle 兼容模式。创建租户时，您需要指定租户的类型。租户创建后，租户类型无法修改，因此创建租户前请规划好您的租户类型。</p>
+</main>
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
@@ -45,7 +49,44 @@
 
 4. 通过 `CREATE TENANT` 语句，创建租户。
 
-   * 创建一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 3，资源池指定为 `mq_pool_01`，Primary Zone 为 zone1，允许所有 IP 连接数据库。
+    语法如下：
+
+    ```sql
+    CREATE TENANT [IF NOT EXISTS] tenant_name 
+        REPLICA_NUM [=] replicanum, 
+        PRIMARY_ZONE [=] zone,
+        RESOURCE_POOL_LIST [=](poolname [, poolname...])
+        {SET | SET VARIABLES | VARIABLES} system_var_name = expr [,system_var_name = expr] ...
+    ```
+
+    参数说明：
+
+    * `IF NOT EXISTS`：可选参数，如果要创建的租户名已存在，并且没有指定 `IF NOT EXISTS`，则会出现错误。
+    * `tenant_name`：指定租户名称，最长 128 个字符，字符只能是大小写英文字母、数字和下划线，而且必须以字母或下划线开头。
+    * `REPLICA_NUM`：指定数据的副本份数。
+    * `PRIMARY_ZONE`：指定租户的 `Primary Zone`。
+
+      `Primary Zone` 指定了租户提供读写服务的 Zone 的优先级。`Primary Zone` 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 `Primary Zone` 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级，使用逗号（,）分隔的 Zone 具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
+
+      例如，`primary_zone ='zone1;zone2,zone3'` 表示该租户优先由 zone1 提供读写服务，zone1 比 zone2、zone3 的优先级高，zone2 和 zone3 是同一优先级。
+
+      <main id="notice" type='notice'>
+       <h4>注意</h4>
+       <p>在指定 `PRIMARY_ZONE` 时，其值可以设置为 RANDOM（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 `Primary Zone`。</p>
+      </main>
+
+    * `RESOURCE_POOL_LIST`：指定分配给租户的资源池列表，必填。如果有多个资源池，要求多个资源池的 `UNIT_NUM` 个数一致。
+
+    * `system_var_name`：指定系统变量或配置项。
+
+      * `OB_TCP_INVITED_NODES`：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。示例中 `%` 表示所有客户端都可登录，如果不指定 `OB_TCP_INVITED_NODES` 的值，则默认租户的连接方式为只允许本机的 IP 登录该租户。白名单配置的详细介绍，参见 [查看和设置白名单](4.view-and-set-whitelist.md)。
+      * `OB_COMPATIBILITY_MODE`：用于指定租户的兼容模式，可选择 MySQL 或 Oracle 兼容模式，并且只能在创建时指定。如果不指定 `OB_COMPATIBILITY_MODE`，则默认兼容模式为 MySQL 模式。
+
+    `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
+
+    示例如下：
+
+    * 创建一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 3，资源池指定为 `mq_pool_01`，Primary Zone 为 zone1，允许所有 IP 连接数据库。
 
         ```sql
         obclient [oceanbase]> CREATE TENANT IF NOT EXISTS mq_t1 
@@ -55,7 +96,7 @@
                         set OB_TCP_INVITED_NODES='%';
         ```
 
-   * 创建一个名为 `oracle_tenant1` 的 Oracle 兼容模式租户，需要显式指定 ob_compatibility_mode='oracle';
+    * 创建一个名为 `oracle_tenant1` 的 Oracle 兼容模式租户，需要显式指定 ob_compatibility_mode='oracle';
 
         ```sql
         obclient [oceanbase]>CREATE TENANT IF NOT EXISTS oracle_tenant1 
@@ -65,27 +106,6 @@
                         SET OB_TCP_INVITED_NODES='%',
                         ob_compatibility_mode='oracle';
         ```
-
-   参数说明：
-
-   * `IF NOT EXISTS`：可选参数，如果要创建的租户名已存在，并且没有指定 IF NOT EXISTS，则会出现错误。
-   * `REPLICA_NUM`：指定数据的副本份数。
-   * `PRIMARY_ZONE`：指定租户的 Primary Zone。
-
-     Primary Zone 指定了租户提供读写服务的 Zone 的优先级。Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级，使用逗号（,）分隔的 Zone 具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
-
-     例如，`primary_zone ='zone1;zone2,zone3'` 表示该租户优先由 zone1 提供读写服务，zone1 比 zone2、zone3 的优先级高，zone2 和 zone3 是同一优先级。
-
-     <main id="notice" type='notice'>
-      <h4>注意</h4>
-      <p>在指定 PRIMARY_ZONE 时，其值可以设置为 RANDOM（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 Primary Zone。</p>
-     </main>
-
-   * `RESOURCE_POOL_LIST`：指定分配给租户的资源池列表，必填。如果有多个资源池，要求多个资源池的 UNIT_NUM 个数一致。
-   * `OB_TCP_INVITED_NODES`：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。示例中 `%` 表示所有客户端都可登录，如果不指定 OB_TCP_INVITED_NODES 的值，则默认租户的连接方式为只允许本机的 IP 登录该租户。白名单配置的详细介绍，参见 [查看和设置白名单](4.view-and-set-whitelist.md)。
-   * `OB_COMPATIBILITY_MODE`：用于指定租户的兼容模式，可选择 MySQL 或 Oracle 兼容模式，并且只能在创建时指定。如果不指定 OB_COMPATIBILITY_MODE，则默认兼容模式为 MySQL 模式。
-
-   `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
 
 5. 查询 `DBA_OB_TENANTS` 视图，确认租户创建成功。
 
