--- a/zh-CN/6.manage/3.replica-management/1.copy-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.copy-introduction.md
@@ -1,19 +1,11 @@
 # 副本介绍
 
-副本是 OceanBase 数据库存储引擎中的概念，同一份数据在不同节点的拷贝称为副本，这里的数据是一个用户层面的概念，在 OceanBase 数据库层面，有分区、Tablet、日志流等概念对应，详见下文介绍。介绍副本类型前，我们首先需要了解 RedoLog、MemTable、SSTable 等前置概念。
+副本是 OceanBase 数据库存储引擎中的概念，同一份数据在不同节点的拷贝称为副本，这里的数据是一个用户层面的概念。
 
-OceanBase 数据库的存储引擎采用分层 LSMTree 结构，数据分为两部分：基线数据和增量数据。基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。租户中的数据冗余有多个副本（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个副本间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
+在 OceanBase 数据库层面，我们指日志流，日志流是 OceanBase 4.0 新引入的概念，用于描述用户数据在数据库层面的物理形式。
 
-## 副本类型
+副本是为了提高 OceanBase 数据库的可用性和容错性而引入的概念，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。OceanBase 通过分区，Tablet 复制、日志流同步等方式将数据复制到多个副本以防止数据丢失，确保系统在一个或多个节点故障时，数据可以从其他节点中检索。OceanBase 副本数据包括三种类型：RedoLog、MemTable、SSTable。
 
-OceanBase 数据库在 V3.x 版本支持多种副本类型，包括全能型副本、日志型副本、加密投票型副本、和只读型副本。目前，在 V4.0.0 版本，OceanBase 数据库仅支持全能型副本。
+OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两部分：基线数据和增量数据。基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
 
-* 全能型副本
-  
-  也称为普通副本，其名称为 FULL，简称 F，拥有 RedoLog、MemTable 和 SSTable 等全部完整的数据和功能。它可以随时快速切换为 Leader 对外提供服务。
-
-副本的特性如下表:
-
-|  **类型**  |  **RedoLog**  |  **MemTable**  |  **SSTable**  |  **数据安全**  |  **恢复为 Leader 时间**  |  **资源成本**  |  **服务**  |  **名称(简写)**  |  **副本类型值**  |
-|------------|---------------|----------------|---------------|----------------|--------------------------|----------------|-----------|------------------|-------------|
-|全能型  |  有，参与投票 ( SYNC_CLOG )  |  有 ( WITH_MEMSTORE )  |  有( WITH_SSSTORE )  |  高  |  快  |  高  |  Leader 提供强一致读写，Follower 提供弱一致性读  |  FULL( F )  |  0  |
+OceanBase 4.0 支持的副本类型为全功能副本，也称为普通副本，其名称为FULL，简称F，拥有 RedoLog，MemTable 和 SSTable 等全部完整的数据和功能。全功能副本有角色的概念，即日志流有角色的概念，Leader 和 Follower，Leader 对外提供强一致读写服务，Follower 可以随时快速切换为 Leader 对外提供服务。
