--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/1.overview-of-log-stream.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/1.overview-of-log-stream.md
@@ -1,22 +1,12 @@
-# 日志流概述
+# 概述
 
-日志流代表每个 Unit Group 框定的一组数据，包括若干 Tablet 和有序的 RedoLog 日志流。
+OceanBase 数据库参考传统数据库分区表的概念，把一张表格的数据划分成不同的分区（Partition）。在 V4.0.0 版本，分区是用户创建的逻辑对象，是划分和管理表数据的一种机制。
 
-通过 Paxos 协议实现了多副本日志同步，保证副本间数据的一致性，从而实现了数据的高可用。
+每个分区都有其对应的数据存储对象，称之为分片（Tablet），它具备存储数据的能力，支持在机器之间迁移（transfer），是数据均衡的最小单位。
 
-日志流也是事务的提交单位，事务修改在单个日志流内完成时可以采用一阶段原子提交；事务修改跨多个日志流时，采用 OceanBase 优化的两阶段提交协议完成原子提交，日志流是分布式事务的参与者。
+日志流是由 OceanBase 数据库自动创建和管理的实体，它代表了一批数据的集合，包括若干 Tablet 和有序的 Redo 日志流。它通过 Paxos 协议实现了多副本日志同步，保证副本间数据的一致性，实现了数据的高可用。
 
-## 原理介绍
-
-* 通过设置租户的 Unit Number 和 Primary Zone ， 定义了一组承载业务流量的 Unit 集合，其个数为两者个数之乘积。每个 Unit 放置于一个节点上，从而可以方便的实现租户容量的水平扩展。
-
-* 系统为每个 Zone 的 Unit 进行编号，相同编号的 Unit 组成一个 Unit Group。Unit Group 内所有 Unit 上的数据分布相同，即每个 Unit Group 框定了一组数据。
-
-* 分区是用户创建的逻辑对象，Tablet 与其一一对应，是实际承载数据的物理存储单位。
-
-* Unit Group 与日志流组一一对应，在每个日志流组中，日志流的个数由  Primary Zone 的 Zone 个数决定。从而 Primary Zone 的 Zone 列表中的每个 Zone 都可以分布着日志流组中一个日志流的 Leader。
-
-![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/easy-of-use/manage/replica-management/replica-fine-granularity/replica-fine-grained-concept.png)
+在分布式环境下，为保证数据读写服务的高可用，OceanBase 数据库会把同一个日志流的数据拷贝到多个机器。不同机器同一个日志流的数据拷贝称为副本（Replica）。同一日志流的多个副本使用 Paxos 一致性协议保证副本的强一致，每个日志流和它的副本构成一个独立的 Paxos 组，其中一个日志流为主副本（Leader），其它日志流为从副本（Follower）。主副本具备强一致性读和写能力，从副本具备弱一致性读能力。
 
 ## 相关文档
 
