--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -14,7 +14,20 @@
 
 2. 通过 SHOW 语句查询系统变量信息。
 
-   * 查询 `ob_query_timeout` 的 Session 级别变量，`SHOW SESSION VARIABLES` 语句可以缩写成 `SHOW VARIABLES`。
+   语法如下：
+
+   ```sql
+   SHOW [SESSION | GLOBAL] VARIABLES [LIKE 'pattern' | WHERE expr]
+   ```
+
+   参数说明：
+
+   * `SESSION | GLOBAL`：SESSION 表示会话变量，GLOBAL 表示全局变量。不填写默认修改 Session 变量。
+   * `pattern`：表示变量关键字。
+
+   示例：
+
+   * 查询 `ob_query_timeout` 的 Session 级别变量。
 
       ```sql
       obclient [oceanbase]> SHOW VARIABLES LIKE 'ob_query_timeout';
