--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/2.partition.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/2.partition.md
@@ -1,6 +1,10 @@
 # Partition（分区）
 
-分区是指根据一定的规则，把一个表或者索引分解成多个更小的、更容易管理的部分。每个分区都是一个独立的对象，具有自己的名称和可选的存储特性。
+分区是分布式数据库系统中常见的数据管理技术。
+
+它是指将大量的数据划分为若干个分区，并在不同的节点上执行处理和存储。
+
+通过数据分区，系统可以实现数据的并行处理和分布式存储，使数据的处理和存储更加高效，避免因单一节点的数据量过大而导致系统性能下降，通过数据分区来实现数据的水平扩展，提高系统的可用性，容错性和性能。
 
 分区是用户创建的逻辑对象，是划分和管理表数据的一种机制。用户可以进行多种分区管理操作，包括：创建、删除、truncate、分裂、合并、交换等。
 
