--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
@@ -1,5 +1,9 @@
 # Log Stream（日志流）
 
+日志流（Log Stream）是指在计算机系统中，将日志数据以流的形式进行传输和处理的技术。
+
+日志流的主要作用是将分布式系统中的日志数据实时地收集、传输、存储和分析，以更好地了解系统的运行情况和排查问题。
+
 日志流是由 OceanBase 数据库自动创建和管理的实体，它代表了一批数据的集合，包括若干 Tablet 和有序的 RedoLog 日志流。
 
 RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结构。日志流通过 Paxos 协议实现了多副本日志同步，保证副本间数据的一致性，实现了数据的高可用。日志流副本支持在不同机器之间迁移和复制，以达到机器管理和系统容灾的目的。
