--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/1.introduction-to-tenant-expansion-and-contraction.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/1.introduction-to-tenant-expansion-and-contraction.md
@@ -1,6 +1,8 @@
 # 租户扩缩容介绍
 
-租户扩容本质上是提高租户的服务能力，包括计算能力和存储容量。可以通过提高单节点的服务能力达成，也可以通过增加服务节点达成。
+随着用户业务的发展或衰退，同时业务在不同时段的峰值往往也不同，需要数据库提供弹性的服务能力，OceanBase 通过租户扩缩容功能来支持业务的弹性服务能力。
+
+租户扩/缩容可以提升/降低计算能力和存储容量，OceanBase 提供了提高/降低资源规格、增加/减少服务节点两种途径来实现扩缩容：
 
 * 提高单节点的服务能力：调大租户的资源规格（Unit Config），从而达到单节点的服务能力提升。
 
