--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -66,6 +66,7 @@
 
     创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
 
+    * `unit_name`：资源规格名称。
     * `MAX_CPU`：CPU 规格上限，`MIN_CPU` 是 CPU 规格下限，单位是核数。如果用户没有指定 `MIN_CPU`，默认等于 `MAX_CPU` 值。
     * `MIN_CPU`：最小的 CPU 规格，所有租户的 `MIN_CPU` 的总和不能超过该节点 CPU 总容量 `CPU_CAPACITY`。
     * `MEMORY_SIZE`：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
@@ -74,7 +75,7 @@
 
     `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
 
-    示例如下：
+    示例：
 
     创建一个名称为 `S1_unit_config` 的资源规格，其资源配置为 CPU 为 1 核，内存 2G，日志盘空间 6G。
 
