--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/11.tenant-locking-and-unlocking.md
@@ -1,10 +1,19 @@
 # 租户锁定和解锁
 
-本文介绍如何进行租户锁定和解锁。
+对租户进行锁定，锁定后，不能在该租户上创建新的连接，已有连接保持不变。本文介绍如何进行租户锁定和解锁。
 
-通过 `ALTER TENANT` 可以对租户进行锁定和解锁。
+## 背景信息
 
-对租户进行锁定后，不能在该租户上创建新的连接，已有连接保持不变。如果是应急场景下锁定租户，锁定后需要主动 kill session。
+通过 `ALTER TENANT` 语句对租户锁定和解锁。适用于故障应急场景和运维变更场景：
+
+* 故障应急：租户出现异常正在修复中，为了避免业务流量对修复进程产生影响，可以锁定租户。需要在征得业务方同意的情况下进行操作。应急场景下锁定租户，锁定后需要主动 kill session。
+
+* 运维变更：例如租户需要下线，下线流程需要保证可灰度、可回滚等原则，可以把锁定租户作为流程之一以观察对业务系统的影响。
+
+<main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>锁定和解锁务必配对使用，忘记解锁会导致无法建立新连接。</p>
+</main>
 
 ## 租户锁定
 
@@ -22,7 +31,7 @@
 
 3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。
 
-   本示例查看租户 `mq_t1` 的锁定状态。
+   以查看租户 `mq_t1` 的锁定状态为例：
 
     ```sql
     obclient [oceanbase]> SELECT TENANT_ID,TENANT_NAME,LOCKED FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -36,7 +45,9 @@
 
     `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-4. 通过 `ALTER TENANT` 语句，锁定 `mq_t1` 租户。
+4. 通过 `ALTER TENANT` 语句，锁定租户。
+
+    以锁定租户 `mq_t1` 为例。
 
     ```sql
     obclient [oceanbase]> ALTER TENANT mq_t1 LOCK;
@@ -73,7 +84,7 @@
 
 3. 通过 `DBA_OB_TENANTS` 视图，查看租户信息。
 
-   本示例查看租户 `mq_t1` 的锁定状态。
+   以查看租户 `mq_t1` 的锁定状态为例：
 
     ```sql
     obclient [oceanbase]> SELECT TENANT_ID,TENANT_NAME,LOCKED FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
@@ -87,7 +98,9 @@
 
     `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-4. 通过 `ALTER TENANT` 语句，解锁 `mq_t1` 租户。
+4. 通过 `ALTER TENANT` 语句，解锁租户。
+
+    以解锁租户 `mq_t1` 为例。
 
     ```sql
     obclient [oceanbase]> ALTER TENANT mq_t1 UNLOCK;
