--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -43,7 +43,9 @@
 
     `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
-4. 通过 `DROP RESOURCE UNIT` 语句，删除 `S2_unit_config` 资源规格。
+4. 通过 `DROP RESOURCE UNIT` 语句，删除资源规格。
+
+    以删除资源规格 `S2_unit_config` 为例：
 
     ```sql
     obclient [oceanbase]> DROP RESOURCE UNIT S2_unit_config;
