--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -6,7 +6,7 @@
 
 1. 使用 root 用户登录到数据库的用户租户。
 
-   本示例中使用 `mq_t1`  租户。
+   以 `mq_t1`  租户为例：
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
