--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -18,7 +18,7 @@
 
 1. 使用 root 用户登录到数据库的用户租户。
 
-   本示例中使用 `mq_t1` 租户。
+   以登录 `mq_t1` 租户为例：
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
@@ -57,17 +57,15 @@
 
 ## 修改 Global 级别的系统变量
 
-1. 登使用 root 用户登录到数据库的用户租户。
+1. 使用 root 用户登录到数据库的用户租户。
 
-   本示例中使用 `mq_t1` 租户。
+   以登录 `mq_t1` 租户为例：
 
     ```sql
     $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
 2. 查询租户的 Global 变量。
-  
-   本示例以系统变量 `ob_query_timeout` 为例。
 
     ```sql
     obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
