--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
@@ -1,4 +1,4 @@
-# 修改资源规格
+# 调整资源规格
 
 修改资源规格，即是调整资源规格中的 CPU、Memory 等参数的值。本文介绍如何修改资源规格。
 
@@ -22,7 +22,7 @@
 
 3. 通过 `DBA_OB_UNIT_CONFIGS` 视图，获取资源规格的配置信息。
 
-   本示例中查询资源单元 `S1_unit_config` 的配置信息。
+   以查询资源单元 `S1_unit_config` 的配置信息为例：
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
@@ -36,14 +36,32 @@
   
     该视图的详细说明，请参见 [oceanbase.DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-4. 通过 ALTER RESOURCE UNIT 语句，修改资源规格 `S1_unit_config` 的 MAX_CPU 为 2，MEMORY_SIZE 为 4G。
+4. 通过 ALTER RESOURCE UNIT 语句，修改资源规格。
+
+    语法如下：
+
+    ```sql
+    ALTER RESOURCE UNIT unit_name 
+    MEMORY_SIZE [=] 'size_value',
+    MAX_CPU [=] cpu_num;
+    ```
+
+    参数说明：
+
+    * `unit_name`：资源规格名称。
+    * `MEMORY_SIZE`：内存规格。
+    * `MAX_CPU`：CPU 规格上限。
+
+    `ALTER RESOURCE UNIT` 语句的详细说明，请参见 [ALTER RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md)。
+
+    示例：
+
+    修改资源规格 `S1_unit_config` 的 MAX_CPU 为 2，MEMORY_SIZE 为 4G。
 
     ```sql
     obclient [oceanbase]> ALTER RESOURCE UNIT S1_unit_config MAX_CPU 2, MEMORY_SIZE '4G';
     Query OK, 0 rows affected
     ```
-
-    `ALTER RESOURCE UNIT` 语句的详细说明，请参见 [ALTER RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md)。
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格配置修改完成。
 
