--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -27,7 +27,7 @@
 
 3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，获取资源池的配置信息。
 
-    本示例中查询资源池 `mq_pool_02` 的配置信息。
+    以查询资源池 `mq_pool_02` 的配置信息为例：
 
     ```sql
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
@@ -45,18 +45,46 @@
 
     <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 UNIT，UNIT_NUM，ZONE_LIST 中两条及以上的属性，需要分多条语句执行。</li><li> 如果该资源池已经被租户使用，只允许修改 UNIT 和 ZONE_LIST，修改 UNIT_NUM 将会报错。</li><li> 修改 ZONE_LIST 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
+     <p><ul><li>单条语句只能修改一个属性，如果需要同时修改 `UNIT`，`UNIT_NUM`，`ZONE_LIST` 中两条及以上的属性，需要分多条语句执行。</li><li> 修改 `ZONE_LIST` 时，每次仅支持添加或删除一个 Zone。</li></ul></p>
     </main>
+
+    语法如下：
+
+    ```sql
+    ALTER RESOURCE POOL pool_name
+        UNIT [=] unit_name,
+        UNIT_NUM [=] unit_num,
+        ZONE_LIST [=] ('zone' [, 'zone' ...]);
+    ```
+
+    参数说明：
+
+    * `pool_name`：资源池名称。
+    * `UNIT`：该资源池的资源规格。
+    * `UNIT_NUM`：资源单元个数。增加 Unit 数量时，`UNIT_NUM` 的值不能大于每个 Zone 内 OBServer 的个数。
+
+      <main id="notice" type='notice'>
+      <h4>注意</h4>
+      <p>如果该资源池已经被租户使用，无法通过修改资源池属性的方式修改，需要通过 `ALTER RESOURCE TENANT` 语句进行修改。</p>
+      </main>
+
+    * `ZONE_LIST`：资源池的 Zone 分布。
+
+    `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
+
+    `ALTER RESOURCE TENANT` 语句的详细说明，请参见 [ALTER RESOURCE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/2.alter-resource-tenant.md)。
+
+    示例：
 
     * 资源池未被分配给租户
 
-      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 2，ZONE_LIST 为 `'zone1','zone2','zone3'`。
+      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 3，`ZONE_LIST` 为 `'zone1','zone2','zone3'`。
 
         ```sql
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
         Query OK, 0 rows affected
 
-        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT_NUM=2;
+        obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT_NUM=3;
         Query OK, 0 rows affected
 
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
@@ -67,26 +95,18 @@
 
       租户资源池修改配置时，UNIT_NUM 需要通过 `ALTER RESOURCE TENANT` 语句进行修改。
 
-      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 2，ZONE_LIST 为 `'zone1','zone2','zone3'`。
+      修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 3，ZONE_LIST 为 `'zone1','zone2','zone3'`。
 
          ```sql
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
         Query OK, 0 rows affected
 
-        obclient [oceanbase]> ALTER RESOURCE TENANT mq_t2 UNIT_NUM=2;
+        obclient [oceanbase]> ALTER RESOURCE TENANT mq_t2 UNIT_NUM=3;
         Query OK, 0 rows affected
 
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 ZONE_LIST=('zone1','zone2','zone3');
         Query OK, 0 rows affected
         ```
-
-    参数说明：
-
-    * UNIT：资源规格名称。
-    * UNIT_NUM：资源单元个数。增加 UNIT 数量时，UNIT_NUM 的值不能大于每个 Zone 内 OBServer 的个数。
-    * ZONE_LIST：zone 列表。
-
-    `ALTER RESOURCE POOL` 语句的详细说明，请参见 [ALTER RESOURCE POOL](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/3.alter-resource-pool.md)。
 
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池配置修改结果。
 
