--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -43,7 +43,9 @@
 
     `DBA_OB_RESOURCE_POOLS` 视图的详细说明，请参见 [oceanbase.DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
-4. 通过 `DROP RESOURCE POOL` 语句，删除 `mq_pool_02` 资源池。
+4. 通过 `DROP RESOURCE POOL` 语句，删除资源池。
+
+    以删除资源池 `mq_pool_02` 为例：
 
     ```sql
     obclient [oceanbase]> DROP RESOURCE POOL mq_pool_02;
