--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -29,7 +29,7 @@
 
 3. 通过 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池的配置信息。其中 `TENANT_ID` 为 NULL，说明资源池未被分配，可以执行删除。
 
-   本示例查询 `mq_pool_02` 的配置信息。
+   以查询 `mq_pool_02` 的配置信息为例：
 
     ```sql
     obclient [oceanbase]> SELECT TENANT_ID,NAME FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
